--- a/notebooks/environment.yml
+++ b/notebooks/environment.yml
@@ -3,6 +3,11 @@
 name: aurorabp
 channels:
   - defaults
+platforms:
+  - linux-64
+  - win-64
+  - osx-64
+  - osx-arm64
 dependencies:
   - python=3.8
   - matplotlib
